appId: com.ripostelabs.calculator
name: Suite Calculator adds two numbers
---
- launchApp:
    appId: com.ripostelabs.calculator
    stopApp: true
- extendedWaitUntil:
    visible: "7"
    timeout: 20000
- tapOn: "7"
- tapOn: "+"
- tapOn: "8"
- tapOn: "="
- assertVisible: "15"
- takeScreenshot: suite-calculator
- pressKey: Home
- extendedWaitUntil:
    visible: "Search apps"
    timeout: 20000
